# reco_reviews

./: Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: notebook.ipynb
reco_r/: __init__.py  dataset.py  features.py  plots.py
reco_r/modeling/: predict.py  train.py
src/: config.py  dataset.py  features.py  preprocessing.py  recommender.py  utils.py
src/modeling/: predict.py  train.py
