[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reco_r"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Redouane BOURAS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.10.11"


[tool.ruff]
line-length = 99
src = ["reco_r"]
include = ["pyproject.toml", "reco_r/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reco_r"]
force-sort-within-sections = true

